--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@
             <i class="fas fa-arrow-up   _icon"></i>
         </a>
     </div>
-    <div class="rounded-circle text-center border border-secondary" id="phone-call d-none">
+    <div class="d-none rounded-circle text-center border border-secondary" id="phone-call">
         <i class="fas fa-phone _icon"></i>
     </div>
 </div>
